Fix alignment on user page, fix essos cart modal breaking layout, made it a bit more sane on small devices

--- a/src/components/styles/UserPage.css
+++ b/src/components/styles/UserPage.css
@@ -324,3 +324,9 @@
 
 */
 
+@media (max-width: 720px) {
+	.main-user-header {
+		flex-direction: column;
+		align-items: center;
+	}
+}
